--- a/prepros-6.config
+++ b/prepros-6.config
@@ -51,7 +51,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -161,14 +161,14 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"output\":{\"replaceSegmentsWith\":\"../assets/css\"},\"outputSuffix\":null}",
+  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"output\":{\"replaceSegmentsWith\":\"../../assets/css\"},\"outputSuffix\":null}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
   "autoprefixer": {
     "browsers": "last 5 versions"
   },
   "file-type-pug": "{\"compilers\":[\"pug\"]}",
   "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"],\"output\":{\"relative\":\"../assets/css\"},\"outputSuffix\":\"\"}",
-  "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegmentsWith\":\"../assets/js\"},\"outputSuffix\":\"\"}",
+  "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegmentsWith\":\"../../assets/js\"},\"outputSuffix\":\"\"}",
   "file-type-stylus": "{\"compilers\":[\"stylus\",\"autoprefixer\",\"minify-css\"]}",
   "file-type-markdown": "{\"compilers\":[\"markdown\"]}",
   "file-type-haml": "{\"compilers\":[\"haml\"]}",
