--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,11 @@
   "fileConfigs": [
     {
       "path": "#source/js/main.js",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"\"}"
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "#source/js/wplb-ajax.js",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\"}"
     }
   ],
   "fileTree": {
@@ -96,8 +100,8 @@
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
-      "enable": true,
-      "url": "avito-pro"
+      "enable": false,
+      "url": ""
     }
   },
   "browser-sync": {
@@ -161,21 +165,21 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"output\":{\"replaceSegmentsWith\":\"../../assets/css\"},\"outputSuffix\":null}",
+  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"output\":{\"outputType\":\"RELATIVE_SOURCE\",\"relative\":\"../../assets/css\"},\"outputSuffix\":null}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
   "autoprefixer": {
     "browsers": "last 5 versions"
   },
   "file-type-pug": "{\"compilers\":[\"pug\"]}",
-  "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"],\"output\":{\"relative\":\"../assets/css\"},\"outputSuffix\":\"\"}",
-  "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegmentsWith\":\"../../assets/js\"},\"outputSuffix\":\"\"}",
+  "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"]}",
+  "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegmentsWith\":\"../../assets/js\"}}",
   "file-type-stylus": "{\"compilers\":[\"stylus\",\"autoprefixer\",\"minify-css\"]}",
   "file-type-markdown": "{\"compilers\":[\"markdown\"]}",
   "file-type-haml": "{\"compilers\":[\"haml\"]}",
   "file-type-slim": "{\"compilers\":[\"slim\"]}",
   "file-type-coffee-script": "{\"compilers\":[\"coffee-script\",\"uglify-js\"]}",
   "file-type-livescript": "{\"compilers\":[\"livescript\",\"uglify-js\"]}",
-  "file-type-kit": "{\"compilers\":[\"kit\"],\"output\":{\"replaceSegmentsWith\":\"../content/html\"},\"outputSuffix\":null}",
+  "file-type-kit": "{\"compilers\":[\"kit\"],\"outputSuffix\":null}",
   "uglify-js": {
     "ie8": false,
     "compress": {
