--- a/prepros.config
+++ b/prepros.config
@@ -603,8 +603,8 @@
         ],
         "output": {
           "extension": ".css",
-          "type": "REPLACE_SEGMENTS",
-          "relativePath": "",
+          "type": "SOURCE_RELATIVE",
+          "relativePath": "../../assets/css",
           "suffix": "-dist",
           "alwaysSuffix": false
         }
@@ -926,8 +926,11 @@
         "file": "#source/js/main.js",
         "config": {
           "autoCompile": true,
-          "sourceMap": false,
-          "compileImported": false
+          "tasks": {
+            "concat-js": {
+              "enable": true
+            }
+          }
         }
       },
       {
